--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #2b2e2c;
+  height: 100vh;
 }
 
 code {
